added dockerfile and changer packagin to war file

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ma.ensias</groupId>
 	<artifactId>application</artifactId>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>application</name>
 	<description>forum d'échange et d'événements</description>
