--- a/application/pom.xml
+++ b/application/pom.xml
@@ -16,6 +16,11 @@
 		    <artifactId>servlet-api</artifactId>
 		    <version>2.5</version>
 		</dependency>
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>8.0.23</version>
+		</dependency>
 	</dependencies>
 	
 	<properties>
