--- a/application/WebContent/WEB-INF/web.xml
+++ b/application/WebContent/WEB-INF/web.xml
@@ -10,5 +10,15 @@
 	<welcome-file-list>
 	    <welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
+	
+	<servlet>
+	<servlet-name>Connexion</servlet-name>
+	<servlet-class>ma.ensias.servlets.Connexion</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+	<servlet-name>Connexion</servlet-name>
+	<url-pattern>/connexion</url-pattern>
+	</servlet-mapping>
 
 </web-app>
