--- a/application/pom.xml
+++ b/application/pom.xml
@@ -10,7 +10,6 @@
 	<description>forum d'échange et d'événements</description>
 
 	<dependencies>
-		<!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
 		<dependency>
 		    <groupId>javax.servlet</groupId>
 		    <artifactId>servlet-api</artifactId>
@@ -21,6 +20,12 @@
 		    <artifactId>mysql-connector-java</artifactId>
 		    <version>8.0.23</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.8.6</version>
+		</dependency>
+		
 	</dependencies>
 	
 	<properties>
