--- a/application/src/main/webapp/WEB-INF/web.xml
+++ b/application/src/main/webapp/WEB-INF/web.xml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<web-app	version="3.0"
+<web-app	version="2.3"
 			xmlns="http://java.sun.com/xml/ns/javaee" 
 			xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-			xsi:schemaLocation="http://java.sun.com/xml/ns/javaee	http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+			xsi:schemaLocation="http://java.sun.com/xml/ns/javaee	http://java.sun.com/xml/ns/javaee/web-app_2_3.xsd">
 
 	<display-name>Simple web application</display-name>
+	<servlet>
+		<description> </description>
+		<display-name>SignUpServlet</display-name>
+		<servlet-name>SignUpServlet</servlet-name>
+		<servlet-class>ma.ensias.servlets.SignUpServlet</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>SignUpServlet</servlet-name>
+		<url-pattern>/signup</url-pattern>
+	</servlet-mapping>
 
 	<welcome-file-list>
 	    <welcome-file>index.jsp</welcome-file>
