added topic page api

--- a/application/src/main/webapp/WEB-INF/web.xml
+++ b/application/src/main/webapp/WEB-INF/web.xml
@@ -28,5 +28,15 @@
 	<servlet-name>Connexion</servlet-name>
 	<url-pattern>/connexion</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+	<servlet-name>TopicServlet</servlet-name>
+	<servlet-class>ma.ensias.servlets.TopicServlet</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+	<servlet-name>TopicServlet</servlet-name>
+	<url-pattern>/topic</url-pattern>
+	</servlet-mapping>
 
 </web-app>
