--- a/application/src/main/webapp/WEB-INF/web.xml
+++ b/application/src/main/webapp/WEB-INF/web.xml
@@ -67,6 +67,15 @@
 	<servlet-name>CommentServlet</servlet-name>
 	<url-pattern>/comment</url-pattern>
 	</servlet-mapping>
+	<servlet>
+	<servlet-name>UserServlet</servlet-name>
+	<servlet-class>ma.ensias.servlets.UserServlet</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+	<servlet-name>UserServlet</servlet-name>
+	<url-pattern>/user</url-pattern>
+	</servlet-mapping>
 
 	<!--  
 	<filter>
