--- a/application/src/main/webapp/WEB-INF/web.xml
+++ b/application/src/main/webapp/WEB-INF/web.xml
@@ -76,6 +76,15 @@
 	<servlet-name>UserServlet</servlet-name>
 	<url-pattern>/user</url-pattern>
 	</servlet-mapping>
+	<servlet>
+	<servlet-name>JoinTopicServlet</servlet-name>
+	<servlet-class>ma.ensias.servlets.JoinTopicServlet</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+	<servlet-name>JoinTopicServlet</servlet-name>
+	<url-pattern>/jointopic</url-pattern>
+	</servlet-mapping>
 
 	<!--  
 	<filter>
