--- a/application/src/main/webapp/WEB-INF/web.xml
+++ b/application/src/main/webapp/WEB-INF/web.xml
@@ -20,12 +20,12 @@
 	</servlet-mapping>
 	
 	<servlet>
-	<servlet-name>SignIn</servlet-name>
-	<servlet-class>ma.ensias.servlets.SignIn</servlet-class>
+	<servlet-name>SignInServlet</servlet-name>
+	<servlet-class>ma.ensias.servlets.SignInServlet</servlet-class>
 	</servlet>
 	
 	<servlet-mapping>
-	<servlet-name>SignIn</servlet-name>
+	<servlet-name>SignInServlet</servlet-name>
 	<url-pattern>/signin</url-pattern>
 	</servlet-mapping>
 	<servlet>
