--- a/application/src/main/webapp/WEB-INF/web.xml
+++ b/application/src/main/webapp/WEB-INF/web.xml
@@ -68,7 +68,16 @@
 	<url-pattern>/comment</url-pattern>
 	</servlet-mapping>
 
-
+	<filter>
+	    <filter-name>CorsFilter</filter-name>
+	    <filter-class>ma.ensias.filters.CORSFilter</filter-class>
+	</filter>
+	  
+	<filter-mapping>
+	    <filter-name>CorsFilter</filter-name>
+	    <url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
 	<filter>
 		<filter-name>RestrictionFilter</filter-name>
 		<filter-class>ma.ensias.filters.RestrictionFilter</filter-class>
