--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -24,6 +24,7 @@
     "@types/gsap": "^1.20.2",
     "capacitor": "^0.5.5",
     "gsap": "^2.1.3",
+    "ngx-cookie-service": "^11.0.2",
     "rxjs": "^6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
