--- a/application/pom.xml
+++ b/application/pom.xml
@@ -25,6 +25,13 @@
 		    <artifactId>gson</artifactId>
 		    <version>2.8.6</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.junit.jupiter</groupId>
+		    <artifactId>junit-jupiter-api</artifactId>
+		    <version>5.6.0</version>
+		    <scope>test</scope>
+		</dependency>
+		
 	</dependencies>
 	<properties>
 		<java.version>1.8</java.version>
