--- a/application/pom.xml
+++ b/application/pom.xml
@@ -9,16 +9,16 @@
 	<name>application</name>
 	<description>forum d'échange et d'événements</description>
 	<dependencyManagement>
-    <dependencies>
-        <dependency>
-            <groupId>org.jboss.arquillian</groupId>
-            <artifactId>arquillian-bom</artifactId>
-            <version>1.4.0.Final</version>
-            <scope>import</scope>
-            <type>pom</type>
-        </dependency>
-    </dependencies>
-</dependencyManagement>
+	    <dependencies>
+	        <dependency>
+	            <groupId>org.jboss.arquillian</groupId>
+	            <artifactId>arquillian-bom</artifactId>
+	            <version>1.4.0.Final</version>
+	            <scope>import</scope>
+	            <type>pom</type>
+	        </dependency>
+	    </dependencies>
+	</dependencyManagement>
 	<dependencies>
 		<dependency>
 		    <groupId>javax.servlet</groupId>
@@ -36,35 +36,37 @@
 		    <version>2.8.6</version>
 		</dependency>
 		<dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>4.12</version>
-        <scope>test</scope>
-    </dependency>
-		 <dependency>
-        <groupId>org.jboss.spec</groupId>
-        <artifactId>jboss-javaee-7.0</artifactId>
-        <version>1.0.3.Final</version>
-        <type>pom</type>
-        <scope>provided</scope>
-    </dependency>
-    <dependency>
-    <groupId>org.jboss.arquillian.junit</groupId>
-    <artifactId>arquillian-junit-container</artifactId>
-    <scope>test</scope>
-</dependency>
+	        <groupId>junit</groupId>
+	        <artifactId>junit</artifactId>
+	        <version>4.12</version>
+	        <scope>test</scope>
+    	</dependency>
+	 	<dependency>
+	        <groupId>org.jboss.spec</groupId>
+	        <artifactId>jboss-javaee-7.0</artifactId>
+	        <version>1.0.3.Final</version>
+	        <type>pom</type>
+	        <scope>provided</scope>
+    	</dependency>
+	    <dependency>
+		    <groupId>org.jboss.arquillian.junit</groupId>
+		    <artifactId>arquillian-junit-container</artifactId>
+		    <scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20090211</version>
+		</dependency>
 	</dependencies>
 	<properties>
-		<java.version>1.14</java.version>
-		<maven.compiler.source>1.14</maven.compiler.source>
-		<maven.compiler.target>1.14</maven.compiler.target>
+		<java.version>1.8</java.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
-
 	<build>
 		<finalName>application</finalName>
-		
-		
 	</build>
 </project>
