--- a/application/src/main/webapp/WEB-INF/web.xml
+++ b/application/src/main/webapp/WEB-INF/web.xml
@@ -30,7 +30,7 @@
 	</servlet-mapping>
 	<servlet>
 		<servlet-name>Home</servlet-name>
-		<servlet-class>ma.ensias.servlets.Home</servlet-class>
+		<servlet-class>ma.ensias.servlets.HomeServlet</servlet-class>
 	</servlet>
 	
 	<servlet-mapping>
