--- a/application/pom.xml
+++ b/application/pom.xml
@@ -24,6 +24,17 @@
 		    <groupId>com.google.code.gson</groupId>
 		    <artifactId>gson</artifactId>
 		    <version>2.8.6</version>
+		</dependency>	
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>4.12</version>
+				<scope>test</scope>
+			</dependency>
+		<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20090211</version>
 		</dependency>
 	</dependencies>
 	
@@ -37,5 +48,8 @@
 
 	<build>
 		<finalName>application</finalName>
+
+ 
+
 	</build>
 </project>
