--- a/application/pom.xml
+++ b/application/pom.xml
@@ -48,6 +48,14 @@
 
 	<build>
 		<finalName>application</finalName>
+		 <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.19.1</version>
+        </plugin>
+  </plugins>
+		
 
  
 
