--- a/FrontEnd/angular.json
+++ b/FrontEnd/angular.json
@@ -28,7 +28,8 @@
                                 "glob": "**/*.svg",
                                 "input": "node_modules/ionicons/dist/ionicons/svg",
                                 "output": "./svg"
-                            }
+                            },
+                            "src/manifest.webmanifest"
                         ],
                         "styles": ["src/theme/variables.scss", "src/global.scss"],
                         "scripts": [
@@ -55,7 +56,9 @@
                                 "type": "initial",
                                 "maximumWarning": "2mb",
                                 "maximumError": "5mb"
-                            }]
+                            }],
+                            "serviceWorker": true,
+                            "ngswConfigPath": "ngsw-config.json"
                         },
                         "ci": {
                             "progress": false
@@ -100,7 +103,8 @@
                                 "glob": "**/*",
                                 "input": "src/assets",
                                 "output": "/assets"
-                            }
+                            },
+                            "src/manifest.webmanifest"
                         ]
                     },
                     "configurations": {
