Adding searchbar + search result page + signup page + some enhancements + New deploy firebase

--- a/FrontEnd/.firebaserc
+++ b/FrontEnd/.firebaserc
@@ -1,6 +1,7 @@
 {
   "projects": {
     "stonks0": "stonks-b0982",
-    "default": "stonks-20"
+    "stonks1": "stonks-20",
+    "default": "stonks-innov"
   }
 }
